# newforma-function-app-copilot-v2

./: .gitignore  birthday_reminder.py  birthday_reminder_with_email.py  constants.py  create_todo_items.py  edit_todo_items.py  er_email}}  event_manipulation.py  fetch_todo_items.py  pyproject.toml  recurring_monthly_absolute_event.py  recurring_weekly_event.py  recurring_yearly_absolute_event.py  requirements.txt  utils.py
Archive/: .gitignore  README.md  create_event.py  create_todo_items.py  delete_todo_items.py  function_app.py  host.json  pyproject.toml  recurring_daily_event.py
function_app/: .gitignore  VERIFICATION_REPORT.md  function_app.py  pyproject.toml
function_app/docs/: ARCHITECTURE_DIAGRAM.md  EVENTS_STRUCTURE.md
function_app/src/: dependencies.py
function_app/src/common/: exceptions.py  graph_urls.py
function_app/src/config/: settings.py
function_app/src/handlers/: event_handler.py  events_handler.py  todo_handler.py  todo_lists_handler.py  todo_subtasks_handler.py  todo_tasks_handler.py
function_app/src/logging/: filters.py  logger.py
function_app/src/managers/: auth_manager.py  birthday_reminder_manager.py  calendar_event_manager.py  events_manager.py  todo_lists_manager.py  todo_manager.py  todo_subtasks_manager.py  todo_tasks_manager.py
function_app/src/models/: event_base.py  event_common.py  event_events.py  todo_base.py  todo_lists.py  todo_subtasks.py  todo_tasks.py
function_app/src/repositories/: calendar_repository.py  events_repository.py  graph_client.py  todo_lists_repository.py  todo_repository.py  user_repository.py  (+2 more)
(+12 files in other folders)
